Fix spacing

--- a/media/benmeller-screen.css
+++ b/media/benmeller-screen.css
@@ -253,7 +253,7 @@ div#pubs {
 }
 
 div.item > * {
-    text-align: justify;
+    text-align: left;
 	width: 100%;
 }
 
